Added Register and Login Function

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGODB_URI = "mongodb+srv://aceronramuel:sabihinmongpogiako003@cluster0.ozf2t.m
 CLOUDINARY_API_KEY = "582722987143722"
 CLOUDINARY_SECRET_KEY = "KY0CZvI4cqrjTIPpqh_cYX9Wiuw"
 CLOUDINARY_NAME = "ddhyrkiua"
+JWT_SECRET = "aceron"
