--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,6 @@ MONGODB_URI = "mongodb+srv://aceronramuel:sabihinmongpogiako003@cluster0.ozf2t.m
 CLOUDINARY_API_KEY = "582722987143722"
 CLOUDINARY_SECRET_KEY = "KY0CZvI4cqrjTIPpqh_cYX9Wiuw"
 CLOUDINARY_NAME = "ddhyrkiua"
-JWT_SECRET = "aceron"
+JWT_SECRET = "ramuel"
+ADMIN_EMAIL = "demo@ramuel@gmail.com"
+ADMIN_PASSWORD = "demo12345"
