--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ CLOUDINARY_API_KEY = "582722987143722"
 CLOUDINARY_SECRET_KEY = "KY0CZvI4cqrjTIPpqh_cYX9Wiuw"
 CLOUDINARY_NAME = "ddhyrkiua"
 JWT_SECRET = "ramuel"
-ADMIN_EMAIL = "demo@ramuel@gmail.com"
+ADMIN_EMAIL = "demo.ramuel@gmail.com"
 ADMIN_PASSWORD = "demo12345"
